mooveXService.yml
apiVersion: v1
kind: Service
metadata: 
  name: moovex-service
spec: 
  selector:
    app: moovex 
  ports: 
  - protocol: TCP
    port: 3000
    targetPort: 3000
